fixed formatting issues (8pt was too small)
Yikes!

--- a/lol.css
+++ b/lol.css
@@ -8,5 +8,5 @@ body
 {
   font-family: "Jost", sans-serif;
   font-style: normal;
-  line-height: 8pt;
+  line-height: 10pt;
 }
